--- a/styles/layout.css
+++ b/styles/layout.css
@@ -15,3 +15,31 @@ img {
 	max-width: 100%;
 	height: auto;
 }
+
+body {
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr;
+  grid-template-rows: 1fr auto auto 0.5fr;
+  grid-template-areas:
+    "banner banner banner"
+    "menu-bar menu-bar menu-bar"
+    ". main ."
+    "footer footer footer";
+}
+
+body>header {
+  grid-area: banner;
+  text-align: center;
+}
+
+body>nav {
+  grid-area: menu-bar;
+}
+
+body>main {
+  grid-area: main;
+}
+
+body>footer {
+  grid-area: footer;
+}
