--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,6 @@
 body>main {
-	text-align: center;
-	padding: 10px 10% 0 10%;
+	/* text-align: center; */
+	padding: 10px 10% 10px 10%;
 }
 
 body>main * {
@@ -11,25 +11,16 @@ body>main h1, body>main h2, body>main h3, body>main h4, body>main h5, body>main 
 	color: #800;
 	font-family: "Times New Roman", Times, serif;
 	text-transform: uppercase;
+	padding: 10px 0 0 0;
 }
 
 body>main a {
 	color: #800;
 }
 
-/* ! I'm doing something wrong here */
-
-/* * I want to make the main part smaller */
-
-/* * And the text to be left-aligned, but not ENTIRELY to the left */
-
-body>main {
-	/* display: grid; */
-	grid-template-columns: 1fr auto 1fr;
-	grid-template-areas: ". main .";
-	min-height: 500px;
-}
-
-body>main section {
-	grid-area: asd;
+body>main figure {
+	border: 1px solid #800;
+	padding: 10px;
+	text-align: center;
+	box-shadow: 1px 1px 2px gray;
 }
