fix 'injection' of mjs files
adding a <script> to a page/article/project does nothing when it's added to .innerHTML, so I added a <script id=dynamic-script> to index.html where I can inject a working .mjs file;
split startfield into 3 files for dynamic loading;
add padding to paragraphs for readability;
add MSTG basics;
expanded on projects;
cleaned up frontpage.html
changed some TODOs;
add missing width/height for loading=lazy img tags

--- a/styles/main.css
+++ b/styles/main.css
@@ -18,6 +18,10 @@ body>main a {
 	color: #800;
 }
 
+body>main p {
+	margin: 0 0 5px 0;
+}
+
 body>main figure {
 	border: 1px solid #800;
 	padding: 10px;
