--- a/styles/projects.css
+++ b/styles/projects.css
@@ -1,10 +1,5 @@
-section>#in {
-	width: 400px;
-	height: 5em;
-}
-
-section>#out {
-	width: 400px;
+section>textarea, details>textarea {
+	width: 100%;
 	height: 5em;
 }
 
