--- a/styles/main.css
+++ b/styles/main.css
@@ -23,6 +23,18 @@ body>main h1, body>main h2, body>main h3, body>main h4, body>main h5, body>main 
 	text-transform: uppercase;
 }
 
+main h1 {
+	font-size: 2.5em;
+}
+
+main h2 {
+	font-size: 1.5em;
+}
+
+main h3 {
+	font-size: 1.2em;
+}
+
 summary>h1, summary>h2, summary>h3 {
 	display: inline-block;
 }
