reduce variable usage
Mostly because I don't really use them, so I stuck them in a separate file.

--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,12 +1,3 @@
-:root {
-	--main-color-tint2: #d40000;
-	--main-color-tint1: #940000;
-	--main-color-halftint: #9a2121;
-	--main-color: #800;
-	--main-color-shade1: #6e0000;
-	--main-color-shade2: #470000;
-}
-
 body>footer {
 	display: grid;
 	grid-template-areas: "copyright . secret";
@@ -22,6 +13,6 @@ body>footer .secret {
 }
 
 body>footer {
-	border-top: 10px solid var(--main-color-halftint);
+	border-top: 10px solid #9a2121;
 	padding: 30px;
 }
