--- a/styles/nav.css
+++ b/styles/nav.css
@@ -1,12 +1,3 @@
-:root {
-	--main-color-tint2: #d40000;
-	--main-color-tint1: #940000;
-	--main-color-halftint: #9a2121;
-	--main-color: #800;
-	--main-color-shade1: #6e0000;
-	--main-color-shade2: #470000;
-}
-
 body>nav * {
 	color: #fff;
 	font: 14px Arial, sans-serif;
@@ -23,7 +14,7 @@ body>nav *:hover {
 }
 
 body>nav {
-	background-color: var(--main-color-tint1);
+	background-color: #940000;
 	padding: 6px;
 	text-align: center;
 }
