add disclaimer class; make LastUpdated dynamic
LastUpdated is the notification on the top of the page. I used to update it manually because I had created a simple SPA, but since that broke the browser's history I switched to just HTML pages. So now it's dynamic and it'll update if the page updates. Not a perfect solution, since I kinda want it updated when I update the <main> content, not just anything. Oh well.

--- a/styles/main.css
+++ b/styles/main.css
@@ -109,3 +109,13 @@ ul {
 li {
 	list-style-type: '– ';
 }
+
+.disclaimer {
+	background-color: rgba(136, 0, 0, 0.3);
+	color: #fff;
+	font-family: Tahoma, sans-serif;
+	padding: 20px;
+	margin: 20px;
+	border: 2px solid #800;
+	line-height: 150%
+}
