make titles partially hide if the page becomes too thin

--- a/styles/main.css
+++ b/styles/main.css
@@ -16,14 +16,20 @@ body>main h1, body>main h2, body>main h3, body>main h4, body>main h5, body>main 
 
 main h1 {
 	font-size: 2.5em;
+	text-overflow:ellipsis;
+	overflow:hidden;
 }
 
 main h2 {
 	font-size: 1.5em;
+	text-overflow:ellipsis;
+	overflow:hidden;
 }
 
 main h3 {
 	font-size: 1.2em;
+	text-overflow:ellipsis;
+	overflow:hidden;
 }
 
 summary>h1, summary>h2, summary>h3 {
