--- a/styles/projects.css
+++ b/styles/projects.css
@@ -1,4 +1,4 @@
-section>textarea, details>textarea {
+textarea {
 	width: 100%;
 	height: 5em;
 }
@@ -8,12 +8,12 @@ section>canvas {
 	width: 100%;
 }
 
-section #pause {
+#pause {
 	background: #fff;
 	color: red;
 	float: left;
 }
 
-section #starfield {
+#starfield {
 	box-shadow: 1px 1px 2px gray;
 }
