--- a/styles/main.css
+++ b/styles/main.css
@@ -14,22 +14,26 @@ body>main h1, body>main h2, body>main h3, body>main h4, body>main h5, body>main 
 	text-transform: uppercase;
 }
 
+h1::before, h2::before, h3::before {
+	content: "§ ";
+}
+
 main h1 {
 	font-size: 2.5em;
-	text-overflow:ellipsis;
-	overflow:hidden;
+	text-overflow: ellipsis;
+	overflow: hidden;
 }
 
 main h2 {
 	font-size: 1.5em;
-	text-overflow:ellipsis;
-	overflow:hidden;
+	text-overflow: ellipsis;
+	overflow: hidden;
 }
 
 main h3 {
 	font-size: 1.2em;
-	text-overflow:ellipsis;
-	overflow:hidden;
+	text-overflow: ellipsis;
+	overflow: hidden;
 }
 
 summary>h1, summary>h2, summary>h3 {
