--- a/styles/main.css
+++ b/styles/main.css
@@ -14,7 +14,7 @@ body>main h1, body>main h2, body>main h3, body>main h4, body>main h5, body>main 
 	text-transform: uppercase;
 }
 
-h1::before, h2::before, h3::before {
+main h1::before, main h2::before, main h3::before {
 	content: "§ ";
 }
 
