--- a/styles/main.css
+++ b/styles/main.css
@@ -85,8 +85,12 @@ body>main figure {
 }
 
 .article-published, .article-author {
-	padding: 10px;
-	background-color: rgb(136, 0, 0, 0.1);
+	color: #fff;
+	padding: 2px 10px 0 10px;
+	margin-top: 10px;
+	margin-right: 2px;
+	background-color: rgb(136, 0, 0, 0.3);
+	border: 1px solid #800;
 }
 
 table {
@@ -126,6 +130,8 @@ li {
 	font-family: Tahoma, sans-serif;
 	padding: 20px;
 	margin: 20px;
-	border: 2px solid #800;
+	border: 1px dashed #800;
+	border-left-style: solid;
+	border-left-width: 10px;
 	line-height: 150%
 }
