improve the style of links in the footer

--- a/styles/footer.css
+++ b/styles/footer.css
@@ -17,3 +17,31 @@ body>footer {
 	padding: 30px;
 	box-shadow: -1px -2px 2px gray;
 }
+
+body>footer>nav a {
+	color: #800;
+	font: 18px Arial, sans-serif;
+	margin: 0;
+	padding: 8px;
+	text-decoration: none;
+	transition-duration: 300ms;
+	display: inline-block;
+}
+
+body>footer>nav a:hover {
+	background-color: #800;
+	color: #fff;
+	text-decoration: underline;
+}
+
+body>footer>nav {
+	background-color: #fff;
+	text-align: center;
+	transition-duration: 300ms;
+}
+
+body>footer>nav span {
+	color: #800;
+	font: 18px Arial, sans-serif;
+	cursor: default;
+}
