--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,7 @@
 body>main {
 	/* text-align: center; */
 	padding: 10px 10vw 10px 10vw;
+	margin: 0 100px 0 100px;
 }
 
 body>main * {
@@ -12,10 +13,6 @@ body>main h1, body>main h2, body>main h3, body>main h4, body>main h5, body>main 
 	font-family: "Times New Roman", Times, serif;
 	padding: 10px 0 0 0;
 	text-transform: uppercase;
-}
-
-main h1::before, main h2::before, main h3::before, main h4::before {
-	content: "§ ";
 }
 
 main h1 {
@@ -150,4 +147,18 @@ q {
 main hr {
 	color: #800;
 	margin: 10px;
+}
+
+a.self-link {
+	opacity: 0.8;
+	text-decoration: none;
+}
+
+a.self-link:hover {
+	opacity: 1;
+	text-decoration: none;
+}
+
+h1>a.self-link::before, h2>a.self-link::before, h3>a.self-link::before, h4>a.self-link::before, h5>a.self-link::before, h6>a.self-link::before {
+	content: "§";
 }
