--- a/styles/main.css
+++ b/styles/main.css
@@ -74,6 +74,7 @@ body>main figure {
 	border: 1px solid #800;
 	box-shadow: 1px 1px 2px gray;
 	padding: 10px;
+	margin: 0 0 10px 0;
 	text-align: center;
 }
 
