made paragraph font a little bit larger
I found text hard to read on certain screens (especially laptop), so I made them bigger

--- a/styles/main.css
+++ b/styles/main.css
@@ -68,6 +68,8 @@ body a {
 
 body>main p {
 	margin: 0 0 5px 0;
+	font-size: 1.2em;
+	padding: 5px 0 10px 0;
 }
 
 body>main figure {
@@ -120,6 +122,7 @@ ul {
 
 li {
 	list-style-type: '– ';
+	font-size: 1.2em;
 }
 
 .disclaimer {
