cursor becomes pointer when hovering a summary el
This should improve UX - seeing a pointer implies you can click something, and you didn't see the pointer before.

--- a/styles/main.css
+++ b/styles/main.css
@@ -41,6 +41,10 @@ summary {
 	border-bottom: 1px dashed #800;
 }
 
+summary:hover {
+	cursor: pointer;
+}
+
 blockquote {
 	border: 1px dotted rgb(136, 0, 0, 0.2);
 	border-left: 6px solid rgb(136, 0, 0, 0.4);
