--- a/styles/main.css
+++ b/styles/main.css
@@ -1,9 +1,73 @@
+/* HEADER */
+body>header {
+	background: #800;
+	padding: 30px 0 30px 0;
+	text-align: center;
+}
+
+body>header * {
+	color: #fff;
+	margin: 0;
+	padding: 0;
+}
+
+body>header .title {
+	font: 2em "Times New Roman", Times, serif;
+	text-transform: uppercase;
+}
+
+body>header .subtitle {
+	font: 1.2em "Times New Roman", Times, serif;
+	text-transform: uppercase;
+}
+
+body>header .subtitle::first-letter {
+	font-size: 1.2em;
+}
+
+body>header {
+	background: url(/images/logo-light.svg) no-repeat center #800;
+	background-size: 256px 256px;
+}
+
+/* NAV */
+body>nav a {
+	color: #fff;
+	font: 18px Arial, sans-serif;
+	margin: 0;
+	padding: 8px;
+	text-decoration: none;
+	display: inline-block;
+}
+
+body>nav a:hover {
+	background-color: #fff;
+	color: #800;
+	text-decoration: underline;
+}
+
+body>nav {
+	background-color: #940000;
+	text-align: center;
+}
+
+body>nav span {
+	color: #fff;
+	font: 18px Arial, sans-serif;
+	cursor: default;
+}
+
+body>nav {
+	box-shadow: -1px 2px 2px gray;
+}
+
+/* MAIN */
 body {
+	margin: 0;
 	font-size: 1.2em;
 }
 
 body>main {
-	/* text-align: center; */
 	padding: 3vw;
 	margin: 0 0 0 0;
 }
@@ -200,4 +264,98 @@ h1>a.self-link::before, h2>a.self-link::before, h3>a.self-link::before, h4>a.sel
 .crypto-address {
 	font-family: Verdana, Tahoma, sans-serif;
 	font-size: .5em
+}
+
+img {
+	height: auto;
+	max-width: 100%;
+}
+
+/* COOKIE NOTIFICATION */
+#cookie-notification {
+	background: #222;
+	color: #fff;
+	border-radius: 10px;
+	display: flex;
+	flex-direction: row;
+	bottom: 0;
+	left: 0;
+	position: fixed;
+	margin: 0 0 20px 20px;
+	flex-wrap: wrap;
+}
+
+#cookie-notification>p {
+	padding: 16px;
+	margin: 0;
+	flex-wrap: wrap;
+}
+
+#cookie-notification>button {
+	color: #800;
+	font-weight: bold;
+	padding: 14px;
+	background: 0;
+	border: 0;
+	box-sizing: border-box;
+}
+
+#cookie-notification>button:hover {
+	cursor: pointer;
+}
+
+/* FOOTER */
+body>footer {
+	display: flex;
+	flex-wrap: wrap;
+	border-top: 10px solid #9a2121;
+	padding: 30px;
+	box-shadow: -1px -2px 2px gray;
+}
+
+body>footer>nav a {
+	color: #800;
+	font: 18px Arial, sans-serif;
+	margin: 0;
+	padding: 8px;
+	text-decoration: none;
+	display: inline-block;
+}
+
+body>footer>nav a:hover {
+	background-color: #800;
+	color: #fff;
+	text-decoration: underline;
+}
+
+body>footer>nav {
+	background-color: #fff;
+	text-align: center;
+}
+
+body>footer>nav span {
+	color: #800;
+	font: 18px Arial, sans-serif;
+	cursor: default;
+}
+
+body>footer.copyright {
+	flex: 1 1;
+}
+
+body>footer>nav {
+	flex: 1 1;
+}
+
+body>footer>nav * {
+	vertical-align: middle;
+}
+
+body>footer.secret {
+	text-decoration: none;
+	color: #800;
+	cursor: default;
+	font-family: sans-serif;
+	font-size: small;
+	flex: 1 1;
 }
