--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,5 @@
 /* HEADER */
+
 body>header {
 	background: #800;
 	background: url(/images/logo-light.svg) no-repeat center #800;
@@ -28,6 +29,7 @@ body>header .subtitle::first-letter {
 }
 
 /* NAV */
+
 body>nav {
 	background-color: #940000;
 	box-shadow: -1px 2px 2px gray;
@@ -56,6 +58,7 @@ body>nav span {
 }
 
 /* MAIN */
+
 body {
 	font-size: 1.2em;
 	margin: 0
@@ -73,7 +76,7 @@ body>main * {
 body>main h1, body>main h2, body>main h3, body>main h4, body>main h5, body>main h6 {
 	color: #800;
 	font-family: "Times New Roman", Times, serif;
-	padding: 10px 0 0;
+	padding: 1em 0 .3em;
 	text-transform: uppercase
 }
 
@@ -108,15 +111,15 @@ summary:hover {
 }
 
 blockquote {
-	border: 1px dotted rgba(136, 0, 0, 0.2);
-	border-left: 6px solid rgba(136, 0, 0, 0.4);
+	border: 1px dotted #6e0000;
+	border-left: 6px solid #6e0000;
 	margin: 1.5em 10px;
 	padding: .5em 10px;
 	quotes: "“" "„" "‘" "‚"
 }
 
 blockquote:before {
-	color: rgba(136, 0, 0, 0.4);
+	color: #6e0000;
 	content: open-quote;
 	font-size: 2em;
 	line-height: .1em;
@@ -140,6 +143,7 @@ body>main p {
 
 body>main figure {
 	border: 1px solid #800;
+	border-radius: 4px;
 	box-shadow: 1px 1px 2px gray;
 	margin: 0 0 10px;
 	padding: 10px;
@@ -151,7 +155,7 @@ body>main figure {
 }
 
 .article-published, .article-author {
-	background-color: rgba(136, 0, 0, 0.3);
+	background-color: #6e0000;
 	border: 1px solid #800;
 	color: #fff;
 	margin-right: 2px;
@@ -192,7 +196,7 @@ ul>li {
 }
 
 .disclaimer {
-	background-color: rgba(136, 0, 0, 0.3);
+	background-color: #6e0000;
 	border: 1px dashed #800;
 	border-left-style: solid;
 	border-left-width: 10px;
@@ -213,12 +217,11 @@ q {
 }
 
 a.self-link {
-	opacity: .8;
 	text-decoration: none
 }
 
 a.self-link:hover {
-	opacity: 1;
+	color: #b00;
 	text-decoration: none
 }
 
@@ -257,6 +260,7 @@ img {
 }
 
 /* COOKIE NOTIFICATION */
+
 #cookie-notification {
 	background: #222;
 	border-radius: 10px;
@@ -286,6 +290,7 @@ img {
 }
 
 /* FOOTER */
+
 body>footer {
 	border-top: 10px solid #9a2121;
 	box-shadow: -1px -2px 2px gray;
@@ -324,4 +329,24 @@ body>footer>nav * {
 
 body>footer .secret {
 	font: small sans-serif
+}
+
+.button {
+	background-color: #800;
+	border-radius: 4px;
+	border: 2px solid #6e0000;
+	color: #ffffff;
+	cursor: pointer;
+	font-size: .9em;
+	padding: .8em 2em;
+}
+
+.button:hover {
+	background-color: #b00;
+}
+
+.button:active {
+	position: relative;
+	top: 1px;
+	left: 1px;
 }
