forgot to add new CSS for article-meta
published and author aren't styled, for now

--- a/styles/main.css
+++ b/styles/main.css
@@ -154,7 +154,7 @@ body>main figure {
 	display: flex
 }
 
-.article-published, .article-author {
+.article-meta>.published-box, .article-meta>.author-box {
 	background-color: #6e0000;
 	border: 1px solid #800;
 	color: #fff;
