BIG change; moved all .html files in their own folder
Now I don't have to add .html at the end of a URL.

--- a/articles/template/index.html
+++ b/articles/template/index.html
@@ -3,8 +3,9 @@
 
 <head>
 	<meta charset=utf-8 />
-	<title>404 Not Found | The Thaumatorium</title>
-	<meta name=description content="Archival & Search available so you can find what you need" />
+	<title>CHANGE THIS TITLE | The Thaumatorium</title>
+	<meta name=description content="CHANGE THIS DESCRIPTION" />
+	<link rel="canonical" href="https://thaumatorium.com/articles/CHANGE THIS URL">
 	<meta name=theme-color content=#800 />
 	<link rel=apple-touch-icon href=/images/icons-192.png>
 	<meta name=viewport content="width=device-width, initial-scale=1">
@@ -44,22 +45,14 @@
 	</nav>
 
 	<main>
-		<h1>404 Not Found</h1>
-		<p>You've gone somewhere, where you're not supposed to be! That or I removed the page. It's likely my fault.</p>
-		<p>Give the archives a try: <a id=archive></a></p>
-		<p>Or search the site</p>
-		<!-- created via https://cse.google.com/cse/all -->
-		<script async src="https://cse.google.com/cse.js?cx=007273406661708460536:ir7f8zjh3fd"></script>
-		<div class="gcse-search"></div>
-		<footer>
-			PS: Hit me up (on one of the links in the footer) if any other search engine provides a customized search. This version is by Google, but I'd like to NOT use Google if I could. They already have enough power on the internet.
-		</footer>
-		<script>
-			const target = `https://web.archive.org/${window.location.href}`
-			let archiveLink = document.getElementById("archive");
-			archiveLink.href = target;
-			archiveLink.innerHTML = target;
-		</script>
+		<hgroup>
+			<h1>Article template</h1>
+			<div class=article-meta>
+				<div class=published-box>Published: <time class=published datetime=2020-08-04>2020-08-04</time></div>
+				<div class=author-box>Author: <span class=author>NostraDavid</span></div>
+			</div>
+		</hgroup>
+		<p>Lorem ipsum dolor sit amet.</p>
 	</main>
 
 	<footer>
@@ -82,7 +75,7 @@
 		<div id=cookie-notification>
 			<p>This site uses cookies from Google to deliver its services and to analyze traffic. <button>OK</button></p>
 		</div>
-	</footer>
+</footer>
 </body>
 
 </html>
